--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,12 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "akhil profile",
+  "name": "PWA Profile Portfolio",
   "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
+      {
+          "src": "./icon/logo.png",
+          "type": "image/png",
+          "sizes": "1024x1024"
+      }
   ],
   "start_url": ".",
   "display": "standalone",
